--- a/src/scss/settings/_variables.sass
+++ b/src/scss/settings/_variables.sass
@@ -14,7 +14,8 @@ $base-line-thickness:            2px
 
 
 //** Colors **//
-$color-light:                #F8F8F8
+$color-bifi-1:                #FFDF3C
+
 
 
 $column-gutter:                 20px
