--- a/src/scss/settings/_variables.sass
+++ b/src/scss/settings/_variables.sass
@@ -14,8 +14,9 @@ $base-line-thickness:            2px
 
 
 //** Colors **//
-$color-bifi-1:                #FFDF3C
-
+$color-bifi-1:                  desaturate(#FFD93C, 0%)
+$color-base-font:               #111
 
 
 $column-gutter:                 20px
+$site-margin:                   30px
