--- a/src/scss/general/_general.sass
+++ b/src/scss/general/_general.sass
@@ -13,6 +13,7 @@ body
     @include font-base()
     line-height: 1.2
     letter-spacing: -0.02em
+    font-size: 16px
 
     @include media(">xs")
         font-size: 24px
@@ -33,42 +34,100 @@ body
         @include cursor("../img/cursor_point_right.png", 35, 10, pointer, "../img/cursor_point_right@2x.png")
 
 
+@mixin cursor-hover()
+    &:hover
+        @include cursor("../img/cursor_grab.png", 35, 10, pointer, "../img/cursor_grab@2x.png")
+
+
+[data-js-draggable]
+    @include cursor-hover()
 
 a
     &, &:active, &:hover, &:visited, &:link, &:focus
         color: $color-base-font
         text-decoration: none
-
+    @include cursor-hover()
 
 
 .basetext
     position: absolute
-    top: $site-margin
-    left: $site-margin
+    z-index: 10
+    top: ($site-margin/3)
+    left: ($site-margin/3)
+    user-select: none
+
+    &.dragged
+        display: block
+        top: auto
+        right: auto
+        bottom: auto
+        left: auto
 
     &--location
-        top: $site-margin
-        right: $site-margin
+        top: ($site-margin/3)
+        right: ($site-margin/3)
         left: auto
+        transform: translateX(100%) rotate(90deg)
+        transform-origin: 0% 0%;
     &--info
         top: auto
-        right: $site-margin
-        bottom: $site-margin
+        right: ($site-margin/3)
+        bottom: ($site-margin/3)
         left: auto
     &--date
         top: auto
-        bottom: $site-margin
+        bottom: ($site-margin/3)
+        left: ($site-margin/3)
+
+    @include media(">xs")
+        top: ($site-margin/2)
+        left: ($site-margin/2)
+
+        &--location
+            top: ($site-margin/2)
+            right: ($site-margin/2)
+            left: auto
+        &--info
+            top: auto
+            right: ($site-margin/2)
+            bottom: ($site-margin/2)
+            left: auto
+        &--date
+            top: auto
+            bottom: ($site-margin/2)
+            left: ($site-margin/2)
+
+
+    @include media(">md")
+        top: $site-margin
         left: $site-margin
+
+        &--location
+            top: $site-margin
+            right: $site-margin
+            left: auto
+        &--info
+            top: auto
+            right: $site-margin
+            bottom: $site-margin
+            left: auto
+        &--date
+            top: auto
+            bottom: $site-margin
+            left: $site-margin
+
+
 
 
 
 .main-bifi
     text-align: center
     height: 100vh
+    user-select: none
 
     &__content
         @include font-fat()
-        overflow: hidden
+        // overflow: hidden
         font-size: 45vh
         line-height: 0.9
         white-space: nowrap
@@ -84,6 +143,10 @@ a
         &::after
             content: "\000A"
             white-space: pre
+    @include media("<xs")
+        &__content
+            transform: translateY(-56%)
+            font-size: 35vh
 
 
 @media screen and (max-aspect-ratio: 3/5)
@@ -111,6 +174,11 @@ a
             &::after
                 content: none
 
+@media screen and (min-aspect-ratio: 20/9)
+    .main-bifi
+        text-align: center
+        &__content
+            font-size: 70vh
 
 
 .nono
