--- a/src/scss/general/_general.sass
+++ b/src/scss/general/_general.sass
@@ -39,7 +39,7 @@ body
         @include cursor("../img/cursor_grab.png", 35, 10, pointer, "../img/cursor_grab@2x.png")
 
 
-[data-js-draggable]
+.draggable
     @include cursor-hover()
 
 a
