--- a/src/scss/settings/_variables.sass
+++ b/src/scss/settings/_variables.sass
@@ -14,7 +14,7 @@ $base-line-thickness:            2px
 
 
 //** Colors **//
-$color-bifi-1:                  desaturate(#FFD93C, 0%)
+$color-bifi-1:               #ffdc4b // lighten(desaturate(#FFD93C, 0%),3%)
 $color-base-font:               #111
 
 
