[Megacommit] ALL the features

--- a/src/scss/components/_banner.sass
+++ b/src/scss/components/_banner.sass
@@ -8,6 +8,8 @@
     left: 50%
     color: white
     transform: translateY(-64%) translateX(-50%) rotate(-17deg)
+    user-select: none
+    white-space: nowrap
 
     &__info,
     &__subtitle
