--- a/src/scss/components/_mainbifi.sass
+++ b/src/scss/components/_mainbifi.sass
@@ -6,6 +6,7 @@
     text-align: center
     height: 100vh
     user-select: none
+    white-space: nowrap
 
     &__content
         @include font-fat()
