--- a/src/scss/general/_general.sass
+++ b/src/scss/general/_general.sass
@@ -118,6 +118,9 @@ body
             right: 20px
 
 
+        @include cursor-hover()
+
+
 .modernizr-touch
     .infocard
         @include media("<sm")
@@ -127,10 +130,6 @@ body
             left: 0 !important
             right: 0 !important
             bottom: 0 !important
-
-    .hands
-        display: none
-
     .banner,
     // .mainbifi,
     .basetext
